--- a/shell.html
+++ b/shell.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="600" oncontextmenu="event.preventDefault()"></canvas>
-    <textarea class="em_textarea" id="output" rows="8"></textarea>
+    <!-- <textarea class="em_textarea" id="output" rows="8"></textarea> -->
     <script type='text/javascript'>
 
     var img = null;
